# fastapi_learn

./: .gitignore  alembic.ini  book.py  book2.py  pyproject.toml  testdb.db
ToDoApp/: database.py  main.py  models.py
ToDoApp/routers/: admin.py  auth.py  todos.py  users.py
alembic/: README  env.py
alembic/versions/: bd846e8787fb_create_phone_number_for_user_column.py
test/: test_example.py  test_main.py  test_todos.py
