[tool.poetry]
name = "fastapi-learn"
version = "0.1.0"
description = ""
authors = ["shkim <skok1025@naver.com>"]
readme = "README.md"
packages = [{include = "fastapi-learn"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
fastapi = "^0.105.0"
black = "^23.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
