[tool.poetry]
name = "fastapi-learn"
version = "0.1.0"
description = ""
authors = ["shkim <skok1025@naver.com>"]
readme = "README.md"
packages = [{include = "fastapi-learn"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
fastapi = "^0.105.0"
black = "^23.12.0"
sqlalchemy = "^2.0.23"
pymysql = "^1.1.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
